# ray

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  travis.yml
include/ray/assets/: Bitmap.hpp  Color.hpp  Font.hpp  Wavefront.hpp
include/ray/components/: BakedFont.hpp  Movable.hpp  Orientable.hpp  Scalable.hpp  TextureAtlas.hpp  Transformable.hpp
include/ray/entities/: Camera.hpp  Cube.hpp  Mesh.hpp  TransformableMesh.hpp
include/ray/gl/: AbstractTexture.hpp  Attribute.hpp  Buffer.hpp  CubeMap.hpp  Handle.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  Type.hpp  Uniform.hpp  VertexArray.hpp
include/ray/glfw/: glad.hpp  glfw3.hpp
include/ray/math/: LinearAlgebra.hpp  Matrix.hpp  Quaternion.hpp  Rectangle.hpp  Scalar.hpp  Transform.hpp  Transformable.hpp  Trigonometry.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/ray/platform/: FileSystem.hpp  GameLoop.hpp  Inputs.hpp  OpenGL.hpp  Panic.hpp  Print.hpp  Stopwatch.hpp  Time.hpp  TimedBlock.hpp  Window.hpp
include/ray/rendering/: Mesh.hpp
samples/: 00_window.cpp  01_rectangle.cpp  02_texture.cpp  03_cube.cpp  04_teapot.cpp  05_camera.cpp  06_font.cpp  06_lighting.cpp  07_font.cpp  08_text.cpp  09_skybox.cpp  10_framebuffer.cpp  99_all.cpp  CMakeLists.txt  camera.cpp  cube.cpp  rectangle.cpp  teapot.cpp  texture.cpp  window.cpp
samples/windows/: 00_hello_msg_box.cpp  01_windows.cpp  02_triangle.cpp  CMakeLists.txt
src/ray/assets/: Bitmap.cpp  Font.cpp
src/ray/components/: TextureAtlas.cpp
src/ray/gl/: Texture.cpp  TextureAtlas.cpp
src/ray/platform/: FileSystem.cpp
test/: CMakeLists.txt
test/assets/: BitmapTests.cpp
test/math/: MatrixTests.cpp  QuaternionTests.cpp  ScalarTests.cpp  TransformableTests.cpp  UtilsTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
test/platform/: PrintTests.cpp
