macro(add_sample TARGET)
    add_executable(${TARGET} ${TARGET}.cpp)
    target_link_libraries(${TARGET} ray)
endmacro(add_sample)

add_sample(00_window)
add_sample(01_rectangle)
add_sample(02_texture)
add_sample(03_cube)
add_sample(04_teapot)
add_sample(05_camera)
add_sample(06_lighting)
add_sample(07_font)
add_sample(08_text)
